more algos added 3

--- a/index.html
+++ b/index.html
@@ -354,47 +354,61 @@
           </div>
 
 
-          <!-- F2L 28 -->
-            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 28</h3>
-              <img src="images/f2l29.png" alt="F2L28 case" class="rounded mb-2 w-full" />
-              <p><strong>Main Algorithm:</strong> <code>y' R' U R U' R' U R</code></p>
-            </div>
+          <!-- F2L 34 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 34</h3>
+            <img src="images/f2l35.png" alt="F2L34 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U2 R U2 R' U R U R'</code></p>
+          </div>
 
-            <!-- F2L 29 -->
-            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 29</h3>
-              <img src="images/f2l30.png" alt="F2L29 case" class="rounded mb-2 w-full" />
-              <p><strong>Main Algorithm:</strong> <code>R U R' U' R U R'</code></p>
-            </div>
+          <!-- F2L 35 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 35</h3>
+            <img src="images/f2l36.png" alt="F2L35 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U R U' R' U2 R U' R'</code></p>
+          </div>
 
-            <!-- F2L 30 -->
-            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 30</h3>
-              <img src="images/f2l31.png" alt="F2L30 case" class="rounded mb-2 w-full" />
-              <p><strong>Main Algorithm:</strong> <code>R U' R' y' R' U2 R</code></p>
-            </div>
+          <!-- F2L 36 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 36</h3>
+            <img src="images/f2l37.png" alt="F2L36 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U' R U2 R' U' R U' R'</code></p>
+          </div>
 
-            <!-- F2L 31 -->
-            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 31</h3>
-              <img src="images/f2l32.png" alt="F2L31 case" class="rounded mb-2 w-full" />
-              <p><strong>Main Algorithm:</strong> <code>U' R U' R' U2 R U' R'</code></p>
-            </div>
+          <!-- F2L 37 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 37</h3>
+            <img src="images/f2l38.png" alt="F2L37 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U2 R U2 R' U R U R'</code></p>
+          </div>
 
-            <!-- F2L 32 -->
-            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 32</h3>
-              <img src="images/f2l33.png" alt="F2L32 case" class="rounded mb-2 w-full" />
-              <p><strong>Main Algorithm:</strong> <code>U' R U R' d R' U' R</code></p>
-            </div>
+          <!-- F2L 38 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 38</h3>
+            <img src="images/f2l39.png" alt="F2L38 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U R U' R' U' R U R'</code></p>
+          </div>
 
-            <!-- F2L 33 -->
-            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 33</h3>
-              <img src="images/f2l34.png" alt="F2L33 case" class="rounded mb-2 w-full" />
-              <p><strong>Main Algorithm:</strong> <code>U2 R U R' y' U' R' U R</code></p>
-            </div>
+          <!-- F2L 39 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 39</h3>
+            <img src="images/f2l40.png" alt="F2L39 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U' R U2 R' U R U R'</code></p>
+          </div>
+          
+          <!-- F2L 40 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 40</h3>
+            <img src="images/f2l41.png" alt="F2L40 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U2 R U2 R'</code></p>
+          </div>
+
+          <!-- F2L 41 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 41</h3>
+            <img src="images/f2l42.png" alt="F2L41 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>R U R' U R U' R'</code></p>
+          </div>
 
 
 
