first 5 algorithms added

--- a/index.html
+++ b/index.html
@@ -115,45 +115,30 @@
           <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 1</h3>
           <img src="images/f2l1.png" alt="F2L01 case" class="rounded mb-2 w-full" />
           <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
-          <ul class="list-disc list-inside text-sm text-white/80 mt-2">
-            <li><code>R' F R F'</code></li>
-          </ul>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
           <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 2</h3>
           <img src="images/f2l2.png" alt="F2L01 case" class="rounded mb-2 w-full" />
-          <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
-          <ul class="list-disc list-inside text-sm text-white/80 mt-2">
-            <li><code>R' F R F'</code></li>
-          </ul>
+          <p><strong>F2L02:</strong> y' R' U' R</p>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
           <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 3</h3>
           <img src="images/f2l3.png" alt="F2L01 case" class="rounded mb-2 w-full" />
-          <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
-          <ul class="list-disc list-inside text-sm text-white/80 mt-2">
-            <li><code>R' F R F'</code></li>
-          </ul>
+          <p><strong>F2L03:</strong> y' U' R' U R</p>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
           <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 4</h3>
           <img src="images/f2l4.png" alt="F2L01 case" class="rounded mb-2 w-full" />
-          <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
-          <ul class="list-disc list-inside text-sm text-white/80 mt-2">
-            <li><code>R' F R F'</code></li>
-          </ul>
+          <p><strong>F2L04:</strong> R U R'</p>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
           <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 5</h3>
           <img src="images/f2l5.png" alt="F2L01 case" class="rounded mb-2 w-full" />
-          <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
-          <ul class="list-disc list-inside text-sm text-white/80 mt-2">
-            <li><code>R' F R F'</code></li>
-          </ul>
+          <p><strong>F2L05:</strong> U' R U R' U2 R U' R'</p>
         </div>
 
         <!-- F2L 6 -->
