algos 10 to 15 added

--- a/index.html
+++ b/index.html
@@ -145,35 +145,35 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 6</h3>
             <img src="images/f2l6.png" alt="F2L06 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U' R U2 R' U2 R U' R'</code></p>
+            <p><strong>F2L06:</strong> U' R U2 R' U2 R U' R'</p>
           </div>
 
           <!-- F2L 7 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 7</h3>
             <img src="images/f2l7.png" alt="F2L07 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' U R' U' R U2 R' U R</code></p>
+            <p><strong>F2L07:</strong> y' U R' U' R U2 R' U R</p>
           </div>
 
           <!-- F2L 8 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 8</h3>
             <img src="images/f2l8.png" alt="F2L08 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' U R' U2 R U2 R' U R</code></p>
+            <p><strong>F2L08:</strong> y' U R' U2 R U2 R' U R</p>
           </div>
 
           <!-- F2L 9 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 9</h3>
             <img src="images/f2l9.png" alt="F2L09 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' U R' U' R U' R' U' R</code></p>
+            <p><strong>F2L09:</strong> y' U R' U' R U' R' U' R</p>
           </div>
 
           <!-- F2L 10 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 10</h3>
             <img src="images/f2l10.png" alt="F2L10 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U' R U2 ' R' y' U R' U' R</code></p>
+            <p><strong>F2L10:</strong> U' R U2 ' R' y' U R' U' R</p>
           </div>
 
           <!-- F2L 11 -->
