more algos added

--- a/index.html
+++ b/index.html
@@ -180,28 +180,28 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 11</h3>
             <img src="images/f2l11.png" alt="F2L11 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' U R' U R U' R' U' R</code></p>
+            <p><strong>F2L11:</strong> y' U R' U R U' R' U' R</p>
           </div>
 
           <!-- F2L 12 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 12</h3>
             <img src="images/f2l12.png" alt="F2L12 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U' R U R' U R U R'</code></p>
+            <p><strong>F2L12:</strong> U' R U R' U R U R'</p>
           </div>
 
           <!-- F2L 13 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 13</h3>
             <img src="images/f2l13.png" alt="F2L13 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' U R' U2 R Dw' R U R'</code></p>
+            <p><strong>F2L13:</strong> y' U R' U2 R D</p>
           </div>
 
           <!-- F2L 14 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 14</h3>
             <img src="images/f2l14.png" alt="F2L14 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U' R U' R' U R U R'</code></p>
+            <p><strong>F2L14:</strong> U' R U' R' U R U R'</p>
           </div>
 
           <!-- F2L 15 -->
@@ -215,7 +215,7 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 16</h3>
             <img src="images/f2l17.png" alt="F2L16 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>R U' R' U d R' U' R</code></p>
+            <p><strong>F2L16:</strong> R U2 R' U' R U R'</p>
           </div>
 
           <!-- F2L 17 -->
