more algos added 4

--- a/index.html
+++ b/index.html
@@ -222,42 +222,42 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 17</h3>
             <img src="images/f2l18.png" alt="F2L17 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' R' U2 R U R' U' R</code></p>
+            <p><strong>F2L17:</strong> R U' R' U</p>
           </div>
 
           <!-- F2L 18 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 18</h3>
             <img src="images/f2l19.png" alt="F2L18 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U R U2 R' U R U' R'</code></p>
+            <p><strong>F2L18:</strong> y' R' U2 R U R' U' R</p>
           </div>
 
           <!-- F2L 19 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 19</h3>
             <img src="images/f2l20.png" alt="F2L19 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U2 R U R' U R U' R'</code></p>
+            <p><strong>F2L19:</strong> U R U2 R' U R U' R'</p>
           </div>
 
           <!-- F2L 20 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 20</h3>
             <img src="images/f2l21.png" alt="F2L20 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' U' R' U2 R U' R' U R</code></p>
+            <p><strong>F2L20:</strong> U2 R U R' U R U' R'</p>
           </div>
 
           <!-- F2L 21 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 21</h3>
             <img src="images/f2l22.png" alt="F2L21 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' U2 R' U' R U' R' U R</code></p>
+            <p><strong>F2L21:</strong> y' U' R' U2 R U' R' U R</p>
           </div>
 
           <!-- F2L 22 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 22</h3>
             <img src="images/f2l23.png" alt="F2L22 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>R U R' U2' R U R' U' R U R'</code></p>
+            <p><strong>F2L22:</strong> y' U2 R' U' R U' R' U R</p>
           </div>
 
           <!-- F2L 23 -->
