--- a/index.html
+++ b/index.html
@@ -264,35 +264,35 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 23</h3>
             <img src="images/f2l24.png" alt="F2L23 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' R' U' R U2 R' U' R U R' U' R</code></p>
+            <p><strong>F2L23:</strong> R U R' U2' R U R' U' R U R'</p>
           </div>
 
           <!-- F2L 24 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 24</h3>
             <img src="images/f2l25.png" alt="F2L24 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y U' L' U L d R U' R'</code></p>
+            <p><strong>F2L24:</strong> y' R' U' R U2 R' U' R U R' U' R</p>
           </div>
 
           <!-- F2L 25 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 25</h3>
             <img src="images/f2l26.png" alt="F2L25 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>R U' R' U R U' R'</code></p>
+            <p><strong>F2L25:</strong> y U' L' U L</p>
           </div>
 
           <!-- F2L 26 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 26</h3>
             <img src="images/f2l27.png" alt="F2L26 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' R' U' R U R' U' R</code></p>
+            <p><strong>F2L26:</strong> R U' R' U R U' R'</p>
           </div>
 
           <!-- F2L 27 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 27</h3>
             <img src="images/f2l28.png" alt="F2L27 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U R U' R' F R' F' R</code></p>
+            <p><strong>F2L27:</strong> y' R' U' R U R ' U' R</p>
           </div>
 
 
@@ -300,35 +300,35 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 28</h3>
             <img src="images/f2l29.png" alt="F2L28 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' R' U R U' R' U R</code></p>
+            <p><strong>F2L28:</strong> U R U' R' F R' F' R</p>
           </div>
 
           <!-- F2L 29 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 29</h3>
             <img src="images/f2l30.png" alt="F2L29 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>R U R' U' R U R'</code></p>
+            <p><strong>F2L29:</strong> y' R' U R U' R' U R</p>
           </div>
 
           <!-- F2L 30 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 30</h3>
             <img src="images/f2l31.png" alt="F2L30 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>R U' R' y' R' U2 R</code></p>
+            <p><strong>F2L30:</strong> R U R' U' R U R'</p>
           </div>
 
           <!-- F2L 31 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 31</h3>
             <img src="images/f2l32.png" alt="F2L31 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U' R U' R' U2 R U' R'</code></p>
+            <p><strong>F2L31:</strong> R U' R' y' R' U2 R</p>
           </div>
 
           <!-- F2L 32 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 32</h3>
             <img src="images/f2l33.png" alt="F2L32 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U' R U R' d R' U' R</code></p>
+            <p><strong>F2L32:</strong> U' R U' R' U2 R U' R'</p>
           </div>
 
           <!-- F2L 33 -->
