more algos added 5

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 33</h3>
             <img src="images/f2l34.png" alt="F2L33 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U2 R U R' y' U' R' U R</code></p>
+            <p><strong>F2L33:</strong> U' R U R'</p>
           </div>
 
 
@@ -343,35 +343,35 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 34</h3>
             <img src="images/f2l35.png" alt="F2L34 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U2 R U2 R' U R U R'</code></p>
+            <p><strong>F2L34:</strong> R U R' U' R U R' U' R U R'</p>
           </div>
 
           <!-- F2L 35 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 35</h3>
             <img src="images/f2l36.png" alt="F2L35 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U R U' R' U2 R U' R'</code></p>
+            <p><strong>F2L35:</strong> U' R U2 R' U R U R'</p>
           </div>
 
           <!-- F2L 36 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 36</h3>
             <img src="images/f2l37.png" alt="F2L36 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U' R U2 R' U' R U' R'</code></p>
+            <p><strong>F2L36:</strong> y' U R' U' R</p>
           </div>
 
           <!-- F2L 37 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 37</h3>
             <img src="images/f2l38.png" alt="F2L37 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U2 R U2 R' U R U R'</code></p>
+            <p><strong>F2L37:</strong> R U' R' U' R U R' U2 R U' R'</p>
           </div>
 
           <!-- F2L 38 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 38</h3>
             <img src="images/f2l39.png" alt="F2L38 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U R U' R' U' R U R'</code></p>
+            <p><strong>F2L38:</strong> R U' R' U y' R' U' R U' R' U' R</p>
           </div>
 
           <!-- F2L 39 -->
