more algos added 7

--- a/index.html
+++ b/index.html
@@ -378,21 +378,21 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 39</h3>
             <img src="images/f2l40.png" alt="F2L39 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U' R U2 R' U R U R'</code></p>
+            <p><strong>F2L39:</strong> R U' R' D</p>
           </div>
           
           <!-- F2L 40 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 40</h3>
             <img src="images/f2l41.png" alt="F2L40 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>U2 R U2 R'</code></p>
+            <p><strong>F2L40:</strong> R U' R' U R U2 R' U R U' R'</p>
           </div>
 
           <!-- F2L 41 -->
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 41</h3>
             <img src="images/f2l42.png" alt="F2L41 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>R U R' U R U' R'</code></p>
+            <p><strong>F2L41:</strong> R U' R' U</p>
           </div>
 
 
