--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 15</h3>
             <img src="images/f2l15.png" alt="F2L15 case" class="rounded mb-2 w-full" />
-            <p><strong>Main Algorithm:</strong> <code>y' R' U R U' y U' R U R'</code></p>
+            <p><strong>F2L15:</strong> U R U2 R' U R U' R'</p>
           </div>
 
           <!-- F2L 16 -->
