--- a/index.html
+++ b/index.html
@@ -47,67 +47,77 @@
         3×3×3 Rubik's Cube Moves
       </h2>
 
-      <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-4 gap-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 px-4">
         <!-- Move Block Template -->
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
           <h3 class="text-xl font-semibold mb-2 text-cyan-300">U (Up clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="U" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
+          <twisty-player puzzle="3x3x3" alg="U" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
           <h3 class="text-xl font-semibold mb-2 text-cyan-300">U' (Up counter-clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="U'" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
+          <twisty-player puzzle="3x3x3" alg="U'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
           <h3 class="text-xl font-semibold mb-2 text-cyan-300">D (Down clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="D" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
+          <twisty-player puzzle="3x3x3" alg="D" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
           <h3 class="text-xl font-semibold mb-2 text-cyan-300">D' (Down counter-clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="D" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
+          <twisty-player puzzle="3x3x3" alg="D'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
           <h3 class="text-xl font-semibold mb-2 text-cyan-300">L (Left clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="L" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
-        </div>
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">L' (Left counter-clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="L'" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
-        </div>
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">R (Right clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="R" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
-        </div>
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">R' (Right counter-clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="R'" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
-        </div>
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">F (Forward clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="F" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
-        </div>
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">F' (Forward counter-clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="F'" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
-        </div>
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">B (Backward clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="B" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
-        </div>
-        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">B' (Backward counter-clockwise)</h3>
-          <twisty-player puzzle="3x3x3" alg="B'" background="none" playback-view="end" style="width:100%; height:300px;"></twisty-player>
+          <twisty-player puzzle="3x3x3" alg="L" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
-        <!-- Add other moves here (D', L, L', R, R', F, F', B, B') similarly -->
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">L' (Left counter-clockwise)</h3>
+          <twisty-player puzzle="3x3x3" alg="L'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
+        </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">R (Right clockwise)</h3>
+          <twisty-player puzzle="3x3x3" alg="R" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
+        </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">R' (Right counter-clockwise)</h3>
+          <twisty-player puzzle="3x3x3" alg="R'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
+        </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">F (Forward clockwise)</h3>
+          <twisty-player puzzle="3x3x3" alg="F" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
+        </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">F' (Forward counter-clockwise)</h3>
+          <twisty-player puzzle="3x3x3" alg="F'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
+        </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">B (Backward clockwise)</h3>
+          <twisty-player puzzle="3x3x3" alg="B" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
+        </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg max-w-sm mx-auto">
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">B' (Backward counter-clockwise)</h3>
+          <twisty-player puzzle="3x3x3" alg="B'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
+        </div>
       </div>
+
 
       <!-- Algorithms Section -->
       <h2 class="text-3xl font-bold mt-12 mb-6 border-l-4 border-cyan-500 pl-4">
         Algorithms
+      </h2>
+
+      <h2 class="text-3xl font-bold mt-12 mb-6 border-l-4 border-cyan-500 pl-4">
+        F2L Algorithm Cases for First and Second Layer
       </h2>
 
       <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-4 gap-6 p-4 text-white">
