--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         Make White Cross
       </h2>
       <div class="grid grid-cols-1 gap-6 md:grid-cols-1 lg:grid-cols-4 gap-6 p-4">
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-yellow-300 text-center">White Dot Case</h3>
             <twisty-player
               puzzle="3x3x3"
@@ -424,29 +424,29 @@
               alg="F R U R' U' F'"
               background="none"
               playback-view="start"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
 
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-yellow-300 text-center">White L Case</h3>
             <twisty-player
               puzzle="3x3x3"
               alg="F R U R' U' F'"
               background="none"
               playback-view="end"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
 
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-yellow-300 text-center">White Horizontal Line</h3>
             <twisty-player
               puzzle="3x3x3"
               alg="F U R U' R' F'"
               background="none"
               playback-view="end"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
       </div>
@@ -455,51 +455,51 @@
             Complete White Side
         </h2>
         <div class="grid grid-cols-1 gap-6 md:grid-cols-1 lg:grid-cols-4 gap-6 p-4">
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 1</h3>
             <twisty-player
               puzzle="3x3x3"
               alg="R U R' U R U U R' U U"
               background="none"
               playback-view="end"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
 
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 2</h3>
             <twisty-player
               puzzle="3x3x3"
               alg="R U R' U R U U R' U U R U R' U R U U R' U U"
               background="none"
               playback-view="end"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
 
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 3</h3>
             <twisty-player
               puzzle="3x3x3"
               alg="R U R' U R U U R' R U R' U R U U R'"
               background="none"
               playback-view="end"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
 
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 4</h3>
             <twisty-player
               puzzle="3x3x3"
               alg="R U R' U R U U R' R U R' U R U U R' R U R' U R U U R'"
               background="none"
               playback-view="end"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
 
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 5</h3>
             <twisty-player
               puzzle="3x3x3"
@@ -507,7 +507,7 @@
               alg="R U R' U R U U R' R U R' U R U U R' R U R' U R U U R' U R U R' U R U U R' U'"
               background="none"
               playback-view="start"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
         </div>
@@ -516,25 +516,25 @@
           Complete Last Layer
         </h2>
         <div class="grid grid-cols-1 gap-6 md:grid-cols-1 lg:grid-cols-4 gap-6 p-4">
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">Realign Corners Correctly</h3>
             <twisty-player
               puzzle="3x3x3"
               alg="R' F R' B B R F' R' B B R R U'"
               background="none"
               playback-view="end"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
 
-          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">Realign center pieces of last layer</h3>
             <twisty-player
               puzzle="3x3x3"
               alg="F F U L R' F F L' R U F F"
               background="none"
               playback-view="end"
-              style="width:100%; height:300px;"
+              style="width:100%; height:auto; aspect-ratio: 1;"
             ></twisty-player>
           </div>
         </div>
