--- a/index.html
+++ b/index.html
@@ -50,62 +50,62 @@
       <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-4 gap-6 px-4">
         <!-- Move Block Template -->
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">U (Up clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">U (Up clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="U" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">U' (Up counter-clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">U' (Up counter-clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="U'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">D (Down clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">D (Down clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="D" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">D' (Down counter-clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">D' (Down counter-clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="D'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">L (Left clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">L (Left clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="L" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">L' (Left counter-clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">L' (Left counter-clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="L'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">R (Right clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">R (Right clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="R" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">R' (Right counter-clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">R' (Right counter-clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="R'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">F (Forward clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">F (Forward clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="F" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">F' (Forward counter-clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">F' (Forward counter-clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="F'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">B (Backward clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">B (Backward clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="B" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
 
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg w-full min-w-[280px] mx-auto">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">B' (Backward counter-clockwise)</h3>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300 sm:text-3xl">B' (Backward counter-clockwise)</h3>
           <twisty-player puzzle="3x3x3" alg="B'" background="none" playback-view="end" style="width:100%; height:auto; aspect-ratio: 1;"></twisty-player>
         </div>
       </div>
